# optimized-number-theoretic-transform-implementations

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: arch.cmake  clang-format.cmake  compilation-flags.cmake  sources.cmake  test_x86_64_avx512_ifma.c
include/: ntt_avx512_ifma.h  ntt_hexl.h  ntt_radix4.h  ntt_radix4_s390x_vef.h  ntt_radix4x4.h  ntt_reference.h  ntt_seal.h
include/internal/: avx512.h  defs.h  fast_mul_operators.h  pre_compute.h
src/: ntt_r2_16_avx512_ifma.c  ntt_r4r2_avx512_ifma.c  ntt_radix4.c  ntt_radix4_avx512_ifma.c  ntt_radix4_avx512_ifma_unordered.c  ntt_radix4_s390x_vef.c  ntt_radix4x4.c  ntt_reference.c
tests/: bench.c  main.c  measurements.h  pre-commit-script.sh  test_cases.h  test_correctness.c  tests.h  utils.h
